--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
       "@nestjs/mapped-types": "^2.0.5",
       "@nestjs/platform-express": "^10.0.0",
       "@nestjs/platform-fastify": "^10.3.8",
+      "@types/uuid": "^9.0.8",
       "reflect-metadata": "^0.2.0",
-      "rxjs": "^7.8.1"
+      "rxjs": "^7.8.1",
+      "uuid": "^9.0.1"
    },
    "devDependencies": {
+      "@faker-js/faker": "^8.4.1",
       "@nestjs/cli": "^10.0.0",
       "@nestjs/schematics": "^10.0.0",
       "@nestjs/testing": "^10.0.0",
